--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>B9A5</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <script src="https://cdn.tailwindcss.com"></script>
+ </head>
+
 <body>
-    
+    <!-- header section -->
+    <header class="header mx-20 pt-16 flex flex-row justify-between items-center">
+        <div class="p-ticket">
+            <h1 class="text-[#030712] font-bold text-3xl">P-Ticket</h1>
+        </div>
+        <div class="main flex flex-row gap-10 text-[#4f5159]">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Destination</a>
+            <a href="">Search</a>
+        </div>
+        <div class="bus flex flex-row justify-center items-center gap-5 border-solid h-12 w-24 rounded-md bg-[#e8fae5]">
+            <span class="text-[#1dd100]">Bus</span>
+            <img src="./images/bus-icon.png" alt="" class="bus-img">
+        </div>
+    </header>
+    <!-- benner section -->
+    <section class="benner mx-20 pt-10">
+        <div class="bg_img bg-[url('./images/banner.png')] bg-no-repeat bg-cover h-[600px]">
+            <div class="paribahan flex flex-col justify-center items-center">
+                <h1 class="">End-to-End Travel with <span class="">P Paribahan</span></h1>
+                <p class="">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+            </div>
+        </div>
+        <div class="absoulate">
+            <div class="">
+                <img src="" alt="" class="">
+                <div class="inner">
+                    <h3></h3>
+                    <p class=""></p>
+                </div>
+            </div>
+            <div class="">
+                <img src="" alt="" class="">
+                <div class="inner">
+                    <h3></h3>
+                    <p class=""></p>
+                </div>
+            </div>
+            <div class="">
+                <img src="" alt="" class="">
+                <div class="inner">
+                    <h3></h3>
+                    <p class=""></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- offer section -->
+    <section class="offer">
+
+    </section>
+    <!-- paribahan section -->
+    <section class="paribahan">
+
+    </section>
+    <!-- footer section -->
+    <footer class="footer">
+
+    </footer>
 </body>
+
 </html>
