--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
     </header>
     <!-- benner section -->
     <section class="benner mx-20 pt-10">
-        <div class="bg_img bg-[url('./images/banner.png')] bg-no-repeat bg-cover h-[600px]">
-            <div class="paribahan flex flex-col justify-center items-center">
-                <h1 class="">End-to-End Travel with <span class="">P Paribahan</span></h1>
-                <p class="">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+        <div class="bg_img bg-[url('./images/banner.png')] bg-no-repeat bg-contain h-[650px] flex justify-center">
+            <div class="paribahan flex flex-col justify-center items-center gap-5 text-center">
+                <div class="left ">
+                    <h1 class="text-[#FFFFFF] font-extrabold text-6xl">End-to-End Travel with</h1>
+                <span class="text-[#1dd100] font-extrabold text-6xl">P Paribahan</span>
+                </div>
+                <div class="right w-[600px]">
+                    <p class="text-[#ffffff] w-[599px]">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+                </div>
+                <div class="btn bg-[#1dd100] h-12 rounded-lg w-28">
+                    <p class="p-btn">Buy Tickets</p>
+                </div>
             </div>
         </div>
         <div class="absoulate">
