--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header>
     <!-- benner section -->
     <section class="benner mx-20 pt-10">
-        <div class="bg_img bg-[url('./images/banner.png')] bg-no-repeat bg-contain h-[650px] flex justify-center">
-            <div class="paribahan flex flex-col justify-center items-center gap-5 text-center">
+        <div class="bg_img bg-[url('./images/banner.png')] bg-no-repeat bg-contain h-[650px]">
+            <div class="paribahan flex flex-col justify-center items-center gap-5 text-center pt-20">
                 <div class="left ">
                     <h1 class="text-[#FFFFFF] font-extrabold text-6xl">End-to-End Travel with</h1>
                 <span class="text-[#1dd100] font-extrabold text-6xl">P Paribahan</span>
@@ -36,7 +36,7 @@
                 <div class="right w-[600px]">
                     <p class="text-[#ffffff] w-[599px]">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
                 </div>
-                <div class="btn bg-[#1dd100] h-12 rounded-lg w-28">
+                <div class="btn bg-[#1dd100] h-12 w-28 rounded-lg text-lg font-bold text-center">
                     <p class="p-btn">Buy Tickets</p>
                 </div>
             </div>
