--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </div>
     </header>
     <!-- benner section -->
-    <section class="benner mx-20 pt-10">
-        <div class="bg_img bg-[url('./images/banner.png')] bg-no-repeat bg-contain h-[650px]">
+    <section class="benner mx-20 pt-10 relative">
+        <div class="bg_img bg-[url('./images/banner.png')] bg-no-repeat bg-contain h-[560px] ">
             <div class="paribahan flex flex-col justify-center items-center gap-5 text-center pt-20">
                 <div class="left ">
                     <h1 class="text-[#FFFFFF] font-extrabold text-6xl">End-to-End Travel with</h1>
@@ -37,30 +37,30 @@
                     <p class="text-[#ffffff] w-[599px]">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
                 </div>
                 <div class="btn bg-[#1dd100] h-12 w-28 rounded-lg text-lg font-bold text-center">
-                    <p class="p-btn">Buy Tickets</p>
+                    <p class="p-btn center mt-2">Buy Tickets</p>
                 </div>
             </div>
         </div>
-        <div class="absoulate">
-            <div class="">
-                <img src="" alt="" class="">
-                <div class="inner">
-                    <h3></h3>
-                    <p class=""></p>
+        <div class="absoulate flex flex-row justify-center items-center gap-10 h-20 w-90 -m-10 ">
+            <div class="bg-white shadow shadow-green-600 flex flex-row gap-4 border">
+                <img src="./images/people.png" alt="" class="">
+                <div class="inner1 flex flex-col">
+                    <h3 class="font-bold text-2xl">500K+</h3>
+                    <p class="">Registerd users</p>
                 </div>
             </div>
-            <div class="">
-                <img src="" alt="" class="">
-                <div class="inner">
-                    <h3></h3>
-                    <p class=""></p>
+            <div class="bg-white shadow-green-500 flex flex-row gap-4">
+                <img src="./images/ticket-cupon.png" alt="" class="">
+                <div class="inner2 flex flex-col font">
+                    <h3 class="font-bold text-2xl">1.7 lacks</h3>
+                    <p class="">Tickets sold</p>
                 </div>
             </div>
-            <div class="">
-                <img src="" alt="" class="">
-                <div class="inner">
-                    <h3></h3>
-                    <p class=""></p>
+            <div class="bg-white shadow-green-500 flex flex-row gap-4">
+                <img src="./images/stoppage.png" alt="" class="">
+                <div class="inner3 flex flex-col font">
+                    <h3 class="font-bold text-2xl">80K+</h3>
+                    <p class="">Rental partners</p>
                 </div>
             </div>
         </div>
