--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
             </div>
         </div>
         <div class="absoulate flex flex-row justify-center items-center gap-10 h-20 w-90 -m-10 ">
-            <div class="bg-white shadow shadow-green-600 flex flex-row gap-4 border">
+            <div class="bg-white shadow-xl shadow-green-600 flex flex-row h-20 w-52 p-2 gap-4 rounded-lg">
                 <img src="./images/people.png" alt="" class="">
                 <div class="inner1 flex flex-col">
                     <h3 class="font-bold text-2xl">500K+</h3>
                     <p class="">Registerd users</p>
                 </div>
             </div>
-            <div class="bg-white shadow-green-500 flex flex-row gap-4">
+            <div class="bg-white shadow-xl shadow-green-600 flex flex-row h-20 w-52 p-2 gap-4 rounded-lg">
                 <img src="./images/ticket-cupon.png" alt="" class="">
                 <div class="inner2 flex flex-col font">
                     <h3 class="font-bold text-2xl">1.7 lacks</h3>
                     <p class="">Tickets sold</p>
                 </div>
             </div>
-            <div class="bg-white shadow-green-500 flex flex-row gap-4">
+            <div class="bg-white shadow-xl shadow-green-600 flex flex-row h-20 w-52 p-2 gap-4 rounded-lg">
                 <img src="./images/stoppage.png" alt="" class="">
                 <div class="inner3 flex flex-col font">
                     <h3 class="font-bold text-2xl">80K+</h3>
